--- a/en/垚/垚.13086.wikitext
+++ b/en/垚/垚.13086.wikitext
@@ -23,7 +23,9 @@
 {{Han etym}}
 {{zh-etym-triple|土|earth; dirt}}.
 
-===Pronunciation===
+===Etymology 1===
+
+====Pronunciation====
 {{zh-pron
 |m=yáo
 |c=jiu1,jiu4
@@ -33,10 +35,17 @@
 |cat=n
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # {{rfdef|zh}}
+
+===Etymology 2===
+{{zh-see|堯}}
+
+===References===
+* {{R:twedu|C01653}}
+* {{R:twedu|A00786-028-1}}
 
 ----
 
