--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -15,7 +15,7 @@
 
 ===Glyph origin===
 {{Han etym}}
-{{Han compound|亻|為|t1=man|t2=to make|ls=psc|c1=s|c2=p}}, originally “artificial”.
+{{Han simp|僞|f=爲|t=為}}. {{Han compound|亻|為|t1=man|t2=to make|ls=psc|c1=s|c2=p}}, originally “artificial”.
 
 ===Pronunciation===
 {{zh-pron
