/* Translations */ <United Kingdom#58520844>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -36,7 +36,7 @@
 * Bashkir: {{t|ba|Берләшкән Короллеге|sc=Cyrl}}
 * Basque: {{t+|eu|Erresuma Batua}}
 * Belarusian: {{t|be|Злу́чанае Карале́ўства|n}}, {{t|be|Аб'ядна́нае Карале́ўства|n}}
-* Bengali: {{t+|bn|যুক্তরাজ্য|tr=juktôrajjô|sc=Beng}}
+* Bengali: {{t+|bn|যুক্তরাজ্য}}
 * Breton: {{t|br|Rouantelezh Unanet}}
 * Bulgarian: {{t|bg|Обедине́ното кра́лство|n}}
 * Burmese: {{t|my|ယူနိုက်တက်ကင်းဒမ်း}}
@@ -135,7 +135,7 @@
 * Turkish: {{t+|tr|Birleşik Krallık}}
 * Turkmen: {{t|tk|Birleşen Patyşalyk}}
 * Ukrainian: {{t|uk|Сполу́чене Королі́вство|n}}
-* Urdu: {{t|ur|مملکت متحدہ|tr=mamlakat muttahida|sc=ur-Arab}}, {{t|ur|یونائٹڈ کنگڈم|tr=yūnā'iṭeḍ kiṅgḍam|sc=ur-Arab}}
+* Urdu: {{t|ur|مملکت متحدہ|tr=mamlakat muttahidā|sc=ur-Arab}}, {{t|ur|یونائٹڈ کنگڈم|tr=yūnāiṭeḍ kiṅgḍam|sc=ur-Arab}}
 * Uzbek: {{t+|uz|Birlashgan Qirollik}}
 * Vietnamese: {{t+|vi|Vương quốc Anh}}, {{t+|vi|Anh Quốc}}
 * Võro: {{t|vro|Ühendkuningriik}}
