--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -35,6 +35,7 @@ Related to {{och-l|芚|(of plants) to begin to grow}} ({{zh-ref|Schuessler, 2007
 {{zh-pron
 |m=chūn
 |m-s=cun1
+|dg=чун1
 |c=ceon1
 |c-t=cun1
 |g=cun1
