--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -90,6 +90,7 @@ Possibly from {{inh|zh|sit-pro|*d(w)əj||egg; testicle}} ({{zh-ref|Baxter and Sa
 # {{lb|zh|Cantonese|Hakka|Teochew}} [[egg]]; [[roe]]
 # {{lb|zh|Cantonese|vulgar}} [[testicle]]
 # {{lb|zh|Cantonese|vulgar}} [[goddamn]], [[the hell]]
+# {{lb|zh|Cantonese|vulgar}} (Negates the meaning of the sentence)
 
 =====Synonyms=====
 {{zh-dial|蛋}}
