--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -72,6 +72,7 @@ From {{inh|en|enm|flesh}}, {{m|enm|flesch}}, {{m|enm|flæsch}}, from {{inh|en|an
 * German: {{t+|de|Fleisch|n}}
 * Greek: {{t+|el|σάρκα|f}}
 *: Ancient: {{t|grc|σάρξ|f}}
+* Hebrew: {{t+|he|בָּשָׂר|m|tr=basár}}
 * Hungarian: {{t+|hu|hús}}
 * Ido: {{t+|io|karno}}
 * Indonesian: {{t+|id|daging}}
