--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -153,12 +153,12 @@ From {{inh|en|enm|crepen}}, from {{inh|en|ang|crēopan||to creep, crawl}}, from 
 From the above verb.
 
 ====Noun====
-{{en-noun}}
+{{en-noun|~}}
 
 # The movement of something that creeps (like worms or snails)
 # A relatively small gradual change, variation or deviation (from a planned value) in a measure.
 # A slight displacement of an object: the slight movement of something
-# The gradual expansion or proliferation of something beyond its original goals or boundaries, considered negatively.
+# {{lb|en|uncountable}} The gradual expansion or proliferation of something beyond its original goals or boundaries, considered negatively.
 #: ''Christmas '''creep'''. Feature '''creep'''. Instruction '''creep'''. Mission '''creep''' ''
 # {{lb|en|publishing}} In sewn books, the tendency of [[page]]s on the inside of a [[quire]] to stand out farther than those on the outside of it.
 # {{lb|en|materials science}} An increase in [[strain]] with time; the gradual [[flow]] or [[deformation]] of a material under [[stress]].
