--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -31,6 +31,8 @@ Of either {{inh|zh|sit-pro|-}} origin, compare
 Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 2007}}). For more see {{och-l|[[亮]]}}.
 
 {{och-l|盟|covenant}} is a derivative ({{zh-ref|Schuessler, 2007}}).
+; “Akira”
+: {{obor|zh|ja|-}} {{ja-r|明|あきら}}.
 
 ===Pronunciation===
 {{zh-pron
@@ -72,6 +74,7 @@ Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 
 # {{zh-div|朝}} {{w|Ming dynasty}}
 # {{surname|zh|dot=,}} listed as #111 on the ''[[:w:Baijiaxing|Baijiaxing]]''
 # {{zh-div|母}} {{lb|zh|phonology}} a [[Middle Chinese]] [[initial]] and the [['Phags-pa]] script letter [[ꡏ]] (m-)
+# [[Akira]] {{gl|a Japanese male given name}}
 
 ====See also====
 {{zh-Chinese dynasties}}
@@ -81,6 +84,11 @@ Or from {{der|zh|aav}}, cognate with {{och-l|亮|bright}} ({{zh-ref|Schuessler, 
 
 ===Descendants===
 {{CJKV||みょう|j2=めい|j3=^みん|명|minh|みー}}
+
+===References===
+* {{R:twedu|A01784}}
+
+{{zh-cat|Japanese male given names}}
 
 ----
 
