/* Related terms */ [[secretariat]] <secretary#58562886>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -32,6 +32,7 @@ From {{etyl|ML.|en}} {{m|la|secretarius||one entrusted with secrets}}, from {{et
 * {{l|en|secretion}}
 * {{l|en|secretive}}
 * {{l|en|secretory}}
+* {{l|en|secretariat}}
 
 ====Translations====
 {{trans-top|person keeping records and handling clerical work}}
