--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -580,7 +580,7 @@ From the earlier form (name of an older card game) ''biritch'', probably from {{
 * Danish: {{t+|da|bridge}}
 * Dutch: {{t+|nl|bridge}}
 * Esperanto: {{t+|eo|briĝo}}
-* Faroese: {{t|fo|bridge|n}}
+* Faroese: {{t|fo|briggj|n}}, {{t|fo|bridge|n}}
 * Finnish: {{t+|fi|bridge}}
 * French: {{t+|fr|bridge|m}}
 * Georgian: {{t+|ka|ბრიჯი}}
