--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -140,7 +140,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 }}
 
 ====Descendants====
-{{l|ja|ストレート}}
+* {{desc|ja|ストレート|bor=1}}
 
 ====Translations====
 {{trans-top|not crooked or bent}}
