t+gl:[[tallada]] t+gl:[[corte]] ([[WT:EDIT|Assisted]]) <cut#58581118>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -730,7 +730,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Dutch: {{t+|nl|snee}}
 * Finnish: {{t+|fi|leikkaus}}, {{t+|fi|viilto}}; {{t+|fi|viipale}}, {{t|fi|siivu}}; {{t+|fi|haava}} {{q|wound}}
 * French: {{t+|fr|coupe|f}}
-* Galician: {{t+|gl|corte|m}}
+* Galician: {{t+|gl|corte|m}}, {{t|gl|tallada|f}}
 * German: {{t+|de|Schnitt|m}}
 * Icelandic: {{t|is|afskurður|m}}
 {{trans-mid}}
@@ -785,6 +785,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 {{trans-top|share or portion}}
 * Finnish: {{t+|fi|osuus}}; {{t|fi|siivu}} {{q|informal}}
 {{trans-mid}}
+* Galician: {{t|gl|tallada|f}}
 {{trans-bottom}}
 
 {{trans-top|in cricket, batsman's shot played with a swinging motion}}
@@ -853,6 +854,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Dutch: {{t+|nl|stuk|n}}
 * Finnish: {{t+|fi|pala}}
 * French: {{t+|fr|coupe|f}}
+* Galician: {{t|gl|tallada|f}}, {{t+|gl|corte|m}}
 * Greek: {{t+|el|κομμάτι|n}}
 * Hebrew: {{t+|he|חתיכה|f|tr=khatikhá}}
 {{trans-mid}}
