--- a/en/垢/垢.13094.wikitext
+++ b/en/垢/垢.13094.wikitext
@@ -96,6 +96,17 @@
 #: {{ja-usex|[[垢BAN|'''垢'''BAN]]|'''あか'''-バン|ban of one's account}}
 #* {{ja-usex|さっきプレミアム'''垢'''にしてきたので画質テスト版です。|^さっき プレミアム '''あか''' に してきた の で がしつ テスト ばん です。|I just made my account a premium '''account''', so this is a video quality test version.|ref=[http://www.nicovideo.jp/watch/sm27024908]}}
 
+===Etymology 3===
+{{ja-kanjitab|く|yomi=o}}
+
+====Pronunciation====
+{{ja-pron|く|y=o}}
+
+====Noun====
+{{ja-noun|く}}
+
+# [[klesha]]
+
 ===References===
 <references/>
 
