--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -33,6 +33,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 {{trans-top|of a pale golden colour}}
 * Arabic: {{t|ar|أَشْقَر}}, {{t|ar|شَقْرَاء|f}}
 * Bulgarian: {{t+|bg|рус}}, {{t+|bg|светъл}}
+*Catalan: {{t+|ca|ros}}
 * Chinese:
 *: Mandarin: {{t+|cmn|金髮}}, {{t+|cmn|金发|tr=jīnfà}}
 * Dutch: {{t+|nl|blond}}
