--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -211,16 +211,24 @@ From {{inh|es|la|līber}}, from {{inh|es|itc-ola|loeber}}, from {{inh|es|itc-pro
 #: {{syn|es|sin}}
 
 =====Derived terms=====
-{{col|es
+{{col3|es
 |aire libre
+|barra libre
+|comercio libre
+|libre albedrío
+|libre comercio
 |libremente
+|lucha libre
 |manos libres
+|mercado libre
 |saque libre
 |tiempo libre
 |tiro libre
 |{{l|es|espíritu libre||free spirit}}
 |{{l|es|libre de culpa||off the hook, blameless}}
 |radical libre
+|unión libre
+|verso libre
 }}
 
 =====Related terms=====
