--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -109,10 +109,7 @@ Supposed by some to derive from {{der|en|gd|stob||to prick, to prod, to push, to
 {{en-verb|stabb}}
 
 # {{lb|en|transitive}} To [[pierce]] or to [[wound]] (somebody) with a [[pointed]] [[tool]] or [[weapon]], especially a [[knife]] or [[dagger]].
-#* {{quote-book|en|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]
-|title=[[w:The Case of Miss Elliott|The Tremarn Case]]
-|chapter=1|url=http://openlibrary.org/works/OL8479084W
-|passage=“There the cause of death was soon ascertained ; the victim of this daring outrage had been '''stabbed''' to death from ear to ear with a long, sharp instrument, in shape like an antique stiletto, which […] was subsequently found under the cushions of the hansom.&nbsp;[…]”}}
+#* {{quote-book|en|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]| title=[[w:The Case of Miss Elliott|The Tremarn Case]]| chapter=1| url=http://openlibrary.org/works/OL8479084W| passage=“There the cause of death was soon ascertained ; the victim of this daring outrage had been '''stabbed''' to death from ear to ear with a long, sharp instrument, in shape like an antique stiletto, which […] was subsequently found under the cushions of the hansom.&nbsp;[…]”}}
 #: {{ux|en|If you '''stab''' him in the heart he won't live long enough to retaliate.}}
 # {{lb|en|transitive}} To [[thrust]] in a stabbing motion.
 #: {{ux|en|to '''stab''' a dagger into a person}}
