--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -66,6 +66,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Arabic: {{t|ar|جَمِيل}}
 *: Egyptian Arabic: {{t|arz|جميل|tr=gamīl}}
 *: Moroccan Arabic: {{t|ary|زوين|m|tr=zwin}}
+* Aramaic: {{t|arc|שפירא}}
 * Armenian: {{t+|hy|գեղեցիկ|sc=Armn}}, {{t+|hy|սիրուն|sc=Armn}}
 * Assamese: {{t|as|ধুনীয়া}} {{qualifier|common}}, {{t|as|ভাল লগা}}, {{t|as|সুন্দৰ}}
 * Asturian: {{t|ast|guapu|m}}, {{t|ast|guapa|f}}, {{t|ast|formosu|m}}, {{t|ast|formosa|f}}
@@ -134,8 +135,8 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 * Kunigami: {{t|xug|清ーらせん|tr=すーらせん, sūrasen}}
 * Kurdish:
 *: Sorani: {{t+|ku|جوان}}, {{t+|ku|ئێسک سووک}}
-* Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
 {{trans-mid}}
+* Kyrgyz: {{t+|ky|сулуу}}, {{t+|ky|көркөм}}, {{t+|ky|кооз}}, {{t+|ky|сонун}}, {{t+|ky|чырайлуу}}, {{t+|ky|чырай жүздүү}}, {{t+|ky|сулуу}}, {{t+|ky|укмуштай}}, {{t+|ky|укмуштай}}, {{t+|ky|ажайып}}, {{t+|ky|көйүткөн}}
 * Laboya: {{t|lmy|jorro}}
 * Lao: {{t|lo|ງາມ}}
 * Latin: {{t|la|pulcher}}, {{t|la|formosus|m}}, {{t+|la|bellus|m}}
