--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -23,8 +23,7 @@ From {{der|en|enm|costen}}, from {{der|en|fro|coster}}, {{m|fro|couster||to cost
 # To cause something to be lost; to cause the expenditure or relinquishment of.
 #: {{ux|en|Trying to rescue the man from the burning building '''cost''' them their lives.}}
 #* {{quote-journal|en|title=How our home delivery habit reshaped the world| author=Samanth Subramanian| date=November 21 2019| journal=The Guardian| url=https://www.theguardian.com/technology/2019/nov/21/how-our-home-delivery-habit-reshaped-the-world| passage=the packaging of home-delivered products now accounts for 30% of the solid rubbish the US generates annually, and the cardboard alone '''costs''' 1bn trees. }} 
-#* {{rfdatek|en|William Shakespeare}}
-#*: though it '''cost''' me ten nights' watchings
+#*{{RQ:Shakespeare Much Ado Abot Nothing|act=II|scene=i|passage=though it '''cost''' me ten nights' watchings}}
 # To require to be borne or suffered; to cause.
 #* {{rfdatek|en|John Milton}}
 #*: to do him wanton rites, which '''cost''' them woe
