--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -93,7 +93,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 * Finnish: {{t+|fi|oksa}}
 * French: {{t+|fr|branche|f}}, {{t+|fr|rameau|m}}
 * Friulian: {{t|fur|ram|m}}
-* Galician: {{t+|gl|póla|f}}, {{t|gl|ponla|f}}, {{t+|gl|foupa|f}}, {{t|gl|viorto|m}}, {{t|gl|frónciga|f}}, {{t|gl|galla|f}}, {{t|gl|gallipa|f}}, {{t|gl|galloupa|f}}, {{t|gl|galamandro|m}}
+* Galician: {{t+|gl|póla|f}}, {{t|gl|galla|f}}
 * Georgian: {{t|ka|შტო|sc=Geor}}
 * German: {{t+|de|Ast|m}}, {{t+|de|Zweig|m}}
 * Greek: {{t+|el|κλαδί|n|sc=Grek}}, {{t+|el|κλαρί|n|sc=Grek}}
