--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -36,11 +36,10 @@ From {{inh|en|enm|cote}}, {{m|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|co
 # The [[habit]] or [[vesture]] of an order of men, indicating the order or office; [[cloth]].
 #* {{rfdatek|en|Jonathan Swift}}
 #*: Men of his '''coat''' should be minding their prayers.
-#* {{rfdatek|en|William Shakespeare}}
+#* '''1609''', {{w|William Shakespeare}}, ''A Lover's Compaint''
 #*: She was sought by spirits of richest '''coat'''.
 # A [[coat of arms]].<sup>{{w|Coat of arms|Wp}}</sup>
-#* {{rfdatek|en|William Shakespeare}}
-#*: [[Hark]], countrymen! either renew the fight, / Or tear the lions out of England's '''coat'''.
+#*{{RQ:Shakespeare Henry 6-1|I|v|passage=[[Hark]], countrymen! either renew the fight, / Or tear the lions out of England's '''coat'''.}}
 # A [[coat card]].
 #* {{rfdatek|en|Philip Massinger}}
 #*: Here's a trick of discarded cards of us! We were ranked with '''coats''' as long as old master lived.
