add Welsh <het#58649718>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -359,3 +359,24 @@ From {{der|tpi|en|head}}.
 #* {{tpi-cite-bible|Gen|3|15|Na bai mi mekim yu i stap birua bilong meri, na meri i stap birua bilong yu. Na bai mi mekim ol lain bilong yu i birua long lain bilong meri. Bai ol i krungutim '''het''' bilong yu, na bai yu kaikaim lek bilong ol.”}}
 
 {{LDL|tpi}}
+
+----
+
+==Welsh==
+
+===Etymology===
+Borrowed from {{bor|cy|ang|hætt}}.
+
+===Noun===
+{{cy-noun|f|hetiau}}
+
+# [[hat]]
+
+====Derived terms====
+* {{l|cy|hetiwr||hatter, milliner}}
+
+===Mutation===
+{{cy-mut-auto}}
+
+===Further reading===
+{{R:cy:GPC}}
