--- a/en/惠/惠.15605.wikitext
+++ b/en/惠/惠.15605.wikitext
@@ -89,7 +89,10 @@
 ===Hanja===
 {{ko-hanja/new|은혜|혜}}
 
-# [[grace]]
+# [[grace]], [[benefit]], [[love]]
+# [[good]], [[gentle]], [[nice]]
+# [[wise]], [[intelligent]]
+# [[beautiful]], [[fine]]
 
 ====Compounds====
 * [[恩惠]] ([[은혜]], eun-hye) : [[grace]]
