t+gl:[[custa]] t+gl:[[custas]] ([[WT:EDIT|Assisted]]) <cost#58665919>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -229,7 +229,7 @@ From {{der|en|enm|cost}}, {{m|enm|coust}}, from {{m|enm|costen||to cost}}, see a
 * French: {{t+|fr|coût|m}}, {{t+|fr|frais|m}}
 * Friulian: {{t|fur|cost|m}}
 * Gallo: {{t|roa-gal|cóstauncz|f}}
-* Galician: {{t+|gl|custo|m}}
+* Galician: {{t+|gl|custo|m}}, {{t|gl|custa|f}}, {{t|gl|custas|f-p}}
 * Georgian: {{t|ka|ფასი|sc=Geor}}
 * German: {{t+|de|Kosten|p}}
 * Gothic: {{t|got|𐌰𐌽𐌳𐌰𐍅𐌰𐌹𐍂𐌸𐌹|n}}
