--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -141,6 +141,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 
 ====Descendants====
 * {{desc|ja|ストレート|bor=1}}
+* {{desc|pap|stret|bor=1}}
 
 ====Translations====
 {{trans-top|not crooked or bent}}
