t+ru:[[желвь]] t+cu:[[желꙑ]] t-balance ([[WT:EDIT|Assisted]]) <tortoise#58678410>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -89,8 +89,8 @@ Land tortoises are not native to Australia, yet traditionally freshwater turtles
 * Latvian: {{qualifier|tortoise or turtle}} {{t+|lv|bruņurupucis|m}}
 * Lithuanian: {{qualifier|tortoise or turtle}} {{t+|lt|vėžlys|m}}
 * Luxembourgish: {{t|lb|Landdeckelsmouk|f}}
-{{trans-mid}}
 * Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f}}
+{{trans-mid}}
 * Malay: {{t|ms|kura-kura}}
 * Malayalam: {{t+|ml|ആമ|sc=Mlym}}
 * Maltese: {{t|mt|fekruna|f}}, {{t|mt|fkieren|p}}
@@ -105,6 +105,8 @@ Land tortoises are not native to Australia, yet traditionally freshwater turtles
 * Norwegian:
 *: Bokmål: {{t+|nb|skilpadde|m|f}}, {{t|nb|landskilpadde|m|f}}
 *: Nynorsk: {{t|nn|skjelpadde|f}}, {{t|nn|landskjelpadde|f}}
+* Old Church Slavonic:
+*: Cyrillic: {{t|cu|желꙑ|f}}
 * Old East Slavic: {{t|orv|желꙑ|f}}
 * Old English: {{qualifier|tortoise or turtle}} {{t|ang|byrdling|m}}, {{t|ang|landbyrdling|m}}
 * Pali: {{t|pi|kacchapa|m}}
@@ -113,7 +115,7 @@ Land tortoises are not native to Australia, yet traditionally freshwater turtles
 * Polish: {{qualifier|tortoise or turtle}} {{t+|pl|żółw|m-an}}, {{t+|pl|żółw lądowy|m-an}}
 * Portuguese: {{qualifier|tortoise or turtle}} {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}, {{t+|pt|cágado}}
 * Romanian: {{t|ro|țestoasă|f}}, {{t|ro|broască țestoasă|f}}
-* Russian: {{qualifier|tortoise or turtle}} {{t+|ru|черепа́ха|f}}
+* Russian: {{qualifier|tortoise or turtle}} {{t+|ru|черепа́ха|f}}, {{t+|ru|желвь|f}} {{qualifier|obsolete}}
 * Sanskrit: {{t+|sa|कच्छप|m}}, {{t+|sa|कमठ|m}}
 * Scottish Gaelic: {{t|gd|crùban-coille|m}}, {{t|gd|sligeanach|m}}
 * Serbo-Croatian:
