--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -33,7 +33,6 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 {{trans-top|of a pale golden colour}}
 * Arabic: {{t|ar|أَشْقَر}}, {{t|ar|شَقْرَاء|f}}
 * Bulgarian: {{t+|bg|рус}}, {{t+|bg|светъл}}
-
 * Chinese:
 *: Mandarin: {{t+|cmn|金髮}}, {{t+|cmn|金发|tr=jīnfà}}
 * Dutch: {{t+|nl|blond}}
@@ -49,6 +48,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 {{trans-mid}}
 * Japanese: {{t|ja|[[金髪]]の|tr=きんぱつの, kinpatsu-no}}
 * Korean: {{t|ko|[[금발]]의}}
+* Latin: {{t+|la|flāvus|m}}
 * Latvian: {{t|lv|blonds}}
 * Macedonian: {{t|mk|рус|f}}, {{t|mk|плав|f}}
 * Mongolian: {{t+|mn|шар}}
