t+ca:[[baralla]] t+ca:[[batussa]] t-balance ([[WT:EDIT|Assisted]]) <fight#58702258>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -479,6 +479,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 
 {{trans-top|physical confrontation}}
 * Bulgarian: {{t+|bg|бой|m|sc=Cyrl}}
+* Catalan: {{t+|ca|baralla|f}}, {{t+|ca|batussa|f}}
 * Czech: {{t+|cs|rvačka|f}}
 * Danish: {{t|da|slagsmål}}, {{t+|da|ballade}}
 * Dutch: {{t+|nl|gevecht|n}}, {{qualifier|colloquial|Flanders}} {{t+|nl|boel|m}}
@@ -490,8 +491,8 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * Italian: {{t+|it|rissa|f}}
 * Japanese: {{t+|ja|喧嘩|tr=けんか, kenka|sc=Jpan}}
 * Latin: {{t+|la|pugna}}, {{t|la|rixa|f}}
-* Latvian: {{t|lv|kautiņš}}
 {{trans-mid}}
+* Latvian: {{t|lv|kautiņš}}
 * Lithuanian: {{t|lt|muštynės|p}}, {{t|lt|peštynės|p}}, {{t|lt|grumtynės|p}}
 * Mongolian: {{t-needed|mn}}
 * Norwegian: {{t+|no|slåsskamp}}
