--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -47,7 +47,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 #* '''2003''', Rosie Cowan, ''{{w|The Guardian}}'', 24 April:
 #*: Tony Blair issued a direct challenge to the IRA yesterday when he demanded they give '''straight''' answers to three simple questions{{nb...}}.
 # In a row, in unbroken [[sequence]]; consecutive. {{defdate|from 19<sup>th</sup>c.}}
-#: ''After four '''straight''' wins, Mudchester United are top of the league.''
+#: {{ux|en|After four '''straight''' wins, Mudchester United are top of the league.}}
 #* {{quote-journal|en|date=September 24, 2011|author=David Ornstein|work=BBC Sport
 |title=[http://news.bbc.co.uk/sport2/hi/football/14958156.stm Arsenal 3-0 Bolton]
 |passage=It moves them from 17th to 12th on seven points, while Bolton are now bottom of the table with five '''straight''' defeats.}}
@@ -68,7 +68,8 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 #* '''2011''', Press Association, 10 February:
 #*: Murray started well against Marcos Baghdatis before slumping to defeat in '''straight''' sets and the British No1 admitted he may not have been mentally prepared for the rigours of the ATP Tour after a gruelling start to 2011.
 # {{lb|en|US|politics}} Making no exceptions or deviations in one's support of the organization and candidates of a political party.
-#: {{ux|en|a '''straight''' Republican;&emsp; a '''straight''' Democrat}}
+#: {{ux|en|a '''straight''' Republican}}
+#: {{ux|en|a '''straight''' Democrat}}
 # {{lb|en|US|politics}} Containing the names of all the regularly nominated candidates of a party and no others.
 #: {{ux|en|a '''straight''' ballot}}
 # {{lb|en|colloquial}} [[conventional|Conventional]], [[mainstream]], socially acceptable. {{defdate|from 20<sup>th</sup>c.}}
@@ -78,7 +79,8 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 #* '''1998''', Eileen Fitzpatrick & Dominic Pride, ''[[w:Billboard (magazine)|Billboard]]'', 17 October 1998:
 #*: ‘Her last album was a bit too '''straight''',’ he says, ‘but this one puts her in a more contemporary framework and softens her music.’
 # {{lb|en|fashion}} Not [[plus size]]; [[thin]].
-#: ''the shirts only come in straight sizes, not in plus sizes''; ''shopping at a straight-sized store''
+#: {{ux|en|the shirts only come in '''straight''' sizes, not in plus sizes}}
+#: {{ux|en|shopping at a '''straight'''-sized store}}
 # {{lb|en|colloquial}} Not using [[alcohol]], [[drugs]], ''etc.'' {{defdate|from 20<sup>th</sup>c.}}
 #* '''1989''', {{w|Gus Van Sant}}, ''{{w|Drugstore Cowboy}}'':
 #*: For all the boredom the '''straight''' life brings, it's not too bad.
