--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -27,7 +27,7 @@
 * Afrikaans: {{t|af|Tsjeggiese Republiek}}, {{t|af|Tsjeggië}}
 * Albanian: {{t|sq|Çeke|f}}
 * Amharic: {{t|am|ቼክ|sc=Ethi}}
-* Arabic: {{t|ar|جُمْهُورِيَّة اَلتّْشِيك|f|tr=jumhūriyyat at-tšīk}}, {{t|ar|اَلتّْشِيك|f}}
+* Arabic: {{t|ar|جُمْهُورِيَّةْ اَلتّْشِيك|f}}, {{t|ar|اَلتّْشِيك|f}}
 *: Hijazi Arabic: {{t|acw|التشيك|tr=at-tšīk|sc=Arab}}
 * Armenian: {{t|hy|Չեխիայի Հանրապետություն}}, {{t|hy|Չեխիա}}
 * Asturian: {{t+|ast|Chequia|f}}
@@ -50,7 +50,7 @@
 * Dhivehi: {{t|dv|ޗެކް|sc=Thaa}}
 * Dutch: {{t+|nl|Tsjechische Republiek}}, {{t+|nl|Tsjechië|n}}
 * Esperanto: {{t|eo|Ĉeĥa Respubliko}}, {{t|eo|Ĉeĥio}}
-* Estonian: {{t|et|Tšehhi Vabariik}}, {{t+|et|Tšehhi}}, rarely {{t|et|Tšehhimaa}}
+* Estonian: {{t|et|Tšehhi Vabariik}}, {{t+|et|Tšehhi}}, {{q|rare}} {{t|et|Tšehhimaa}}
 * Faroese: {{t|fo|Kekska lýðveldið|n}}, {{t+|fo|Kekkia|n}}
 * Finnish: {{t+|fi|Tšekin tasavalta}}, {{t+|fi|Tšekki}}
 * French: {{t+|fr|République tchèque|f}}, {{t+|fr|Tchéquie|f}}
@@ -58,19 +58,19 @@
 *: West Frisian: {{t|fy|Tsjechje}}
 * Galician: {{t|gl|República Checa|f}}
 * Georgian: {{t|ka|ჩეხეთის რესპუბლიკა|sc=Geor}}, {{t|ka|ჩეხეთი|sc=Geor}}
-* German: {{t+|de|Tschechische Republik|f}}, {{t+|de|Tschechien|n}}, rarely {{t+|de|Tschechei|f}}
+* German: {{t+|de|Tschechische Republik|f}}, {{t+|de|Tschechien|n}}, {{q|rare}} {{t+|de|Tschechei|f}}
 * Greek: {{t+|el|Τσεχία|f}}
 *: Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}, {{t|pnt|Τσεχία}}
 * Haitian Creole: {{t|ht|Repiblik Tcheki}}
 * Hausa: {{t|ha|Jamhuriyar Cak}}
-* Hebrew: {{t|he|צֶ'כְיָה|f|tr=Chekhia|sc=Hebr}}, {{t|he|הרפובליקה הצ׳כית|tr=ha-Repubeliqah ha-Cheikia|alt=הָרֶפּוּבְּלִיקָה הַצֵ'כִית}}
+* Hebrew: {{t|he|צֶ׳כְיָה|f|tr=Chekhia|sc=Hebr}}, {{t|he|הרפובליקה הצ׳כית|tr=ha-Repubeliqah ha-Cheikia|alt=הָרֶפּוּבְּלִיקָה הַצֵ'כִית}}
 * Hindi: {{t|hi|चेक रिपब्लिक}}, {{t+|hi|चेक}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}, {{t+|hu|Csehország}}
 * Icelandic: {{t|is|Tékkneska lýðveldið|n}}, {{t+|is|Tékkland|n}}
 * Ido: {{t+|io|Chekia}}
 * Indonesian: {{t|id|Ceko}}
 * Interlingua: {{t|ia|Republica Chec}}
-* Irish: {{t|ga|Poblacht na Seice|f}}, {{t|ga|an t[[Seic]]|f}}
+* Irish: {{t|ga|Poblacht na Seice|f}}, {{t|ga|Seic|alt=an tSeic|f}}
 * Italian: {{t+|it|Repubblica Ceca|f}}, {{t+|it|Cechia|f}}
 * Japanese: {{t|ja|チェコ共和国|tr=ちぇこきょうわこく, Cheko kyōwakoku}}, {{t+|ja|チェコ|tr=Cheko}}
 * Kabardian: {{t|kbd|Чехиэ}}
@@ -87,12 +87,12 @@
 * Latvian: {{t|lv|Čehijas Republika|f}}, {{t+|lv|Čehija|f}}
 {{trans-mid}}
 * Lithuanian: {{t+|lt|Čekijos Respublika|f}}, {{t+|lt|Čekija|f}}
-* Luxembourgish: {{t+|lb|Tschechesch Republik}}, {{t|lb|d'[[Tschechei]]|f}}
-* Macedonian: {{t|mk|Че́шка Репу́блика|f|sc=Cyrl}}, {{t+|mk|Че́шка|f|sc=Cyrl}}, rarely {{t|mk|Че́хија|f|sc=Cyrl}}
+* Luxembourgish: {{t+|lb|Tschechesch Republik}}, {{t|lb|Tschechei|alt=d'Tschechei|f}}
+* Macedonian: {{t|mk|Че́шка Репу́блика|f|sc=Cyrl}}, {{t+|mk|Че́шка|f|sc=Cyrl}}, {{q|rarely}} {{t|mk|Че́хија|f|sc=Cyrl}}
 * Malay: {{t|ms|Republik Czech}}, {{t|ms|Czech}}
 * Malayalam: {{t|ml|ചെക്ക്‌|sc=Mlym}}
-* Maltese: {{t|mt|ir-[[Repubblika Ċeka]]}}, {{t|mt|Ċekja|f}}
-* Marathi: {{t|mr|चेक|tr=cek|sc=Deva}}
+* Maltese: {{t|mt|Repubblika Ċeka|alt=ir-Repubblika Ċeka}}, {{t|mt|Ċekja|f}}
+* Marathi: {{t|mr|चेक}}
 * Mongolian: {{t|mn|Бүгд Найрамдах Чех Улс|sc=Cyrl}}, {{t|mn|Чех улс|sc=Cyrl}}
 * Navajo: {{t|nv|Chek bikéyah}}
 * Norman: {{t|nrf|Républyique Tchèque|f}} {{qualifier|Jersey}}
@@ -110,7 +110,7 @@
 * Romansch: {{t|rm|Republica Tscheca|f}}, {{t|rm|Tschechia|f}}
 * Russian: {{t+|ru|Че́шская Респу́блика|f}}, {{t+|ru|Че́хия|f}}
 * Rusyn: {{t|rue|Че́сько|n|sc=Cyrl}}
-* Scottish Gaelic: {{t|gd|an t-[[Seic]]|f}}
+* Scottish Gaelic: {{t|gd|Seic|alt=an t-Seic|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Чешка Република|f|sc=Cyrl}}, {{t|sh|Чешка|f|sc=Cyrl}}
 *: Latin: {{t|sh|Češka Republika|f}}, {{t+|sh|Češka|f}}
