--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -30,6 +30,8 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 #* '''1979''', {{w|Monty Python}}, ''{{w|Always Look on the Bright Side of Life}}''
 #*: For life is quite absurd / And death's the final word / You must always face the '''curtain''' with a bow.
 # {{lb|en|architecture}} That part of a wall of a building which is between two [[pavilion]]s, [[tower]]s, etc.
+# {{lb|en|theater}} The beginning of a show.
+#: ''He took so long to shave his head that we arrived 45 minutes after '''curtain''' and were denied late entry.''
 # {{lb|en|obsolete|derogatory}} A [[flag]]; an [[ensign]].
 #: {{rfquotek|en|Shakespeare}}
 
