--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -60,6 +60,8 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 ##* {{rfdatek|en|Thomas Hamilton}}
 ##*: An English tradesman is always solicitous to '''cut''' the shop whenever he can do so with impunity.
 ## To [[ignore]] as a social [[snub]].
+##* '''1903''', [[w:Samuel Barber (novelist)|Samuel Barber]], ''The Way of All Flesh'', ch 73:
+##*: The ordeal is a painful one, but if a man's moral and intellectual constitution are naturally sound, there is nothing which will give him so much strength of character as having been well '''cut'''.
 ##: {{ux|en|After the incident at the dinner party, people started to '''cut''' him on the street.}}
 # {{lb|en|intransitive|cinema|audio|usually as imperative}} To [[cease]] [[record]]ing activities.
 #: {{ux|en|After the actors read their lines, the director yelled, "'''Cut'''!"}}
