--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -23,6 +23,8 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 |title=[[w:The Case of Miss Elliott|The Lisson Grove Mystery]]
 |chapter=2|url=http://openlibrary.org/works/OL8479084W
 |passage=“H'm&nbsp;!&rdquo; he said, &ldquo;so, so&mdash;it is a tragedy in a prologue and three acts. I am going down this afternoon to see the '''curtain''' fall for the third time on what{{...}}will prove a good burlesque&nbsp;; but it all began dramatically enough. It was last Saturday{{...}}that two boys, playing in the little spinney just outside Wembley Park Station, came across three large parcels done up in American cloth.{{nb...}}”}}
+# {{lb|en|theater}} By extension, the beginning of a show; the moment the curtain rises.
+#: ''He took so long to shave his head that we arrived 45 minutes after '''curtain''' and were denied late entry.''
 # {{lb|en|fortifications}} The flat area of [[wall]] which connects two [[bastions]] or [[towers]]; the main area of a fortified wall.
 #* {{RQ:Flr Mntgn Essays}}, Folio Society, 2006, vol.1, p.220:
 #*: Captain ''Rense'', beleagring the Citie of ''Errona'' for us,{{...}}caused a forcible mine to be wrought under a great '''curtine''' of the walles{{nb...}}.
@@ -30,8 +32,6 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 #* '''1979''', {{w|Monty Python}}, ''{{w|Always Look on the Bright Side of Life}}''
 #*: For life is quite absurd / And death's the final word / You must always face the '''curtain''' with a bow.
 # {{lb|en|architecture}} That part of a wall of a building which is between two [[pavilion]]s, [[tower]]s, etc.
-# {{lb|en|theater}} The beginning of a show.
-#: ''He took so long to shave his head that we arrived 45 minutes after '''curtain''' and were denied late entry.''
 # {{lb|en|obsolete|derogatory}} A [[flag]]; an [[ensign]].
 #: {{rfquotek|en|Shakespeare}}
 
