t+ti:[[ቁረጽ]] ([[WT:EDIT|Assisted]]) <cut#58726387>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -275,6 +275,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Tagalog: {{t|tl|hiwa}}
 * Tatar {{t|tt|кисү}}
 * Thai: {{t+|th|ตัด}}
+* Tigrinya: {{t|ti|ቁረጽ}}
 * Tofa: {{t|kim|кеъсер|tr=ke"ser}}
 * Toku-No-Shima: {{t|tkn|切りぃ|tr=きりぃ, kirï}}
 * Turkish: {{t+|tr|kesmek}}
