--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -275,6 +275,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 * Tagalog: {{t|tl|hiwa}}
 * Tatar {{t|tt|кисү}}
 * Thai: {{t+|th|ตัด}}
+* Tigrinya: {{t|ti|ቁረጽ}}
 * Tofa: {{t|kim|кеъсер|tr=ke"ser}}
 * Toku-No-Shima: {{t|tkn|切りぃ|tr=きりぃ, kirï}}
 * Turkish: {{t+|tr|kesmek}}
@@ -351,6 +352,7 @@ Displaced native {{noncog|enm|snithen}} (from {{noncog|ang|snīþan}}; compare {
 *: Lower Sorbian: {{t|dsb|rězaś|impf}}, {{t|dsb|kšajaś|impf}} {{qualifier|food like bread and cheese}}
 * Spanish: {{t+|es|cortar}}
 * Swedish: {{t+|sv|skära}} {{qualifier|with knife}}, {{t+|sv|klippa}} {{qualifier|with scissors}}
+* Tigrinya: {{t|ti|ቁረጽ}}
 * Welsh: {{t+|cy|torri}}
 * Westrobothnian: {{t|gmq-bot|täli}}
 * Yiddish: {{t|yi|שנײַדן}}, {{t|yi|שערן}}
