--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -98,7 +98,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 * Tibetan: {{t|bo|ཕྱིང་པ}}
 * Turkish: {{t+|tr|aba}}, {{t+|tr|keçe}}, {{t+|tr|kiyiz}} {{qualifier|dialect}}
 * Tuvan: {{t|tyv|кидис}}
-* Uyghur: {{t|ug|kigiz|sc=ug-Latin}}
+* Uyghur: {{t|ug|kigiz}} (''Latin'')
 * Uzbek: {{t|uz|kigiz}}
 
 * Welsh: {{t-needed|cy}}
