--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -206,11 +206,15 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Kabardian: {{t|kbd|лъэмыж}}
 * Kambera: {{t|xbr|mbatang}}
 * Kannada: {{t+|kn|ಸೇತುವೆ}}
+* Karachay-Balkar: {{t|krc|кёпюр|tr=köpür}}
+* Karaim: {{t|kdr|kiopriu}}
+* Karakalpak: {{t|kaa|көпир|tr=köpir}}, {{t|kaa|
 * Karelian: {{t|krl|sildu}}
 * Kashubian: {{t|csb|mòst|m}}
 * Kazakh: {{t+|kk|көпір}}
 * Khmer: {{t+|km|ស្ពាន}}
 * Korean: {{t+|ko|다리}}, {{qualifier|suffix}} {{t|ko|...[[교]]}}
+* Kumyk: {{t|kum|кёпюр|tr=köpür}}
 * Kurdish:
 *: Kurmanji: {{t+|ku|pir}}
 *: Sorani: {{t|ckb|پرد}}
@@ -313,6 +317,7 @@ The verb is from {{der|en|enm|briggen}}, from {{der|en|ang|brycġian||to bridge,
 * Tswana: {{t|tn|borogo}}
 * Turkish: {{t+|tr|köprü}}
 * Turkmen: {{t|tk|köpri}}
+* Tuvan: {{t|tyv|көвүрүг}}
 * Udmurt: {{t|udm|выж}}
 * Ukrainian: {{t|uk|міст|m}}
 * Urdu: {{t|ur|پل|m|tr=pul}}
