--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -17,7 +17,8 @@ From {{etyl|la|en}} {{m|la|i. e.}}, an abbreviation of {{m|la|id est||that is}}.
 {{head|en|adverb}}
 
 # {{lb|en|[[initialism]]}} [[that is|That is]], [[namely]], [[in other words]], [[that is to say]].
-#: ''The three U.S. states on the west coast ('''i.e.''', [[Washington]], [[Oregon]], and [[California]]) have mild seasonal variations in temperature ('''i.e.''', warm winters and cool summers).''
+#: {{ux|en|The three U.S. states on the west coast ('''i.e.''', [[Washington]], [[Oregon]], and [[California]]) have mild seasonal variations in temperature ('''i.e.''', warm winters and cool summers).}}
+#* {{quote-book|en|author=Thomas Hall|authorlink=Thomas Hall (minister)|chapter=[Chap. 3.] Verse 2. For men shall be lovers of themselves, Covetous, Boasters, Proud, Blasphemers, disobedient to Parents, unthankfull, unholy, &c.|title=A Practical and Polemical Commentary: Or, Exposition upon the Third and Fourth Chapters of the Latter Epistle of Saint Paul to Timothy.{{nb...|Wherein the Text is Explained, Some Controversies Discussed, Sundry Cases of Conscience are Cleared, Many Common Places are Succinctly Handled, and Divers Usefull, and Seasonable Observations Raised}}|location=London|publisher=Printed by E. Tyler, for John Starkey,{{nb...|at the Miter at the North Door of the Middle Exchange in Saint Pauls Church-yard.}}|year=1658|page=[95]|pageurl=https://books.google.com/books?id=LvwqAAAAYAAJ&pg=PA95|oclc=950943790|passage=[N]o drunkard ('''''i.e.''''') no Habituall, Impenitent drunkard, ſhall come into Gods Kingdome.}}
 
 ====Usage notes====
 * Often confused with ''[[e.g.]]'': In correct use, ''i.e.'' is used to [[explain]], [[clarify]] or [[rephrase]] a statement, whereas ''[[e.g.]]'' is used to list examples.<br /> The correct use of ''i.e.'' differs from that of ''[[viz.]]'' in that what follows ''i.e.'' merely restates in other words what has already been said, whereas what follows ''viz.'' expands upon what has already been said; and it differs from the correct use of ''e.g.'' in that completeness or near-completeness is suggested by ''i.e.'', whereas e.g. introduces a not complete and often only small selection of examples.
