--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -95,7 +95,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Komi-Permyak: {{t|koi|артавны}}
 * Korean: {{t+|ko|세다}}
 * Kurdish:
-*: Sorani: {{t+|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
+*: Sorani: {{t+|ku|ژماردن}}
 * Kyrgyz: {{t+|ky|саноо}}
 * Lao: {{t|lo|ນັບ}}
 {{trans-mid}}
@@ -176,7 +176,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 {{trans-mid}}
 * Italian: {{t+|it|contare}}
 * Lithuanian: {{t|lt|skaitytis}}
-* Macedonian: {{t|mk|се [[важи]]}}
+* Macedonian: {{t|mk|важи|alt=се важи}}
 * Norwegian:
 *: Bokmål: {{t|nb|regnes}}
 *: Nynorsk: {{t+|nn|telje}}
@@ -239,7 +239,7 @@ From {{inh|en|enm|counten}}, borrowed from {{bor|en|xno|conter}}, from {{der|en|
 * Norwegian:
 *: Bokmål: {{t|nb|opptelling|m|f}}, {{t|nb|telling|m|f}}
 *: Nynorsk: {{t|nn|oppteljing|f}}, {{t|nn|teljing|f}}
-* Persian: {{t+|fa|شمارش|tr=šomāreš}}
+* Persian: {{t+|fa|شمارش|tr=šomâreš}}
 * Polish: {{t+|pl|liczenie}}
 * Portuguese: {{t+|pt|contagem|f}}
 * Quechua: {{t|qu|yupa}}
