--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -86,11 +86,11 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 * Albanian: {{t+|sq|mullë}}, {{t+|sq|zgrof}}, {{t+|sq|stomak}}
 * Amharic: {{t|am|ጨጓራ|m|sc=Ethi}}
 * Arabic: {{t+|ar|مَعِدَة|f}}, {{t+|ar|مِعْدَة|f}}
-*: Egyptian Arabic: {{t|arz|معدة|f|tr=meʕda|sc=Arab}}
+*: Egyptian Arabic: {{t|arz|معدة|f|tr=meʿda|sc=Arab}}
 * Aragonese: {{t|an|estomago|m|}}
 * Aramaic:
-*: Hebrew: {{t|arc|אסטומכא|m|tr=’isṬōmkā’|sc=Hebr}}
-*: Syriac: {{t|arc|ܐܣܛܘܡܟܐ|m|tr=’isṬōmkā’|sc=Syrc}}
+*: Hebrew: {{t|arc|אסטומכא|m|tr=’isṭōmkā’|sc=Hebr}}
+*: Syriac: {{t|arc|ܐܣܛܘܡܟܐ|m|tr=’isṭōmkā’|sc=Syrc}}
 * Armenian: {{t+|hy|ստամոքս}}
 * Assamese: {{t|as|পাকস্থলী}}
 * Asturian: {{t+|ast|estómagu|m}}
@@ -184,10 +184,10 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 * Malay: {{t|ms|perut}}
 * Malayalam: {{t+|ml|ആമാശയം}}
 * Maltese: {{t|mt|stonku|m}}
-* Manchu: {{t|mnc|ᡤᡠᠸᡝᠵᡳᡥᡝ|tr=guwejihe}}
+* Manchu: {{t|mnc|ᡤᡠᠸᡝᠵᡳᡥᡝ}}
 * Mandinka: {{t|mnk|konoo}}
 * Marathi: {{t|mr|जठर|sc=Deva}}
-* Middle Persian: {{t|pal|𐭪𐭥𐭬𐭡|tr=kumb}}, {{t|pal|𐭪𐭥𐭬𐭩𐭪𐭩|tr=kumīg}}
+* Middle Persian: {{t|pal|𐭪𐭥𐭬𐭡|ts=kumb}}, {{t|pal|𐭪𐭥𐭬𐭩𐭪𐭩|ts=kumīg}}
 * Mongolian: {{t+|mn|гэдэс}}
 * Navajo: {{t|nv|abid|sc=Latn}}
 * Nepali: {{t-needed|ne}}
@@ -201,7 +201,7 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|желудъкъ|m}}
 * Old English: {{t|ang|maga|m}}, {{t|ang|wamb|f}}, {{t|ang|būc|m}}
-* Old Turkic: {{t|otk|𐰴𐰆𐰺𐰆𐰍𐰽𐰴|tr=quruɣsaq}}
+* Old Turkic: {{t|otk|𐰴𐰆𐰺𐰆𐰍𐰽𐰴|ts=quruɣsaq}}
 * Oriya: {{t+|or|ଫଣ୍ଡ}}
 * Ossetian: {{t-needed|os}}
 * Ottoman Turkish: {{t|ota|قورساق|tr=qursaq}}
@@ -328,7 +328,7 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 * Kikuyu: {{t|ki|nda}}
 * Korean: {{t+|ko|배}}
 * Kurdish:
-*: Sorani: {{t+|ku|زگ|tr=zig|sc=ku-Arab}}, {{t+|ku|ورگ|tr=wirg|sc=ku-Arab}}
+*: Sorani: {{t+|ku|زگ}}, {{t+|ku|ورگ}}
 * Kyrgyz: {{t+|ky|карын|sc=Cyrl}}, {{t+|ky|курсак}}, {{t+|ky|ич}}
 * Latgalian: {{t|ltg|vādars|m}}
 {{trans-mid}}
@@ -347,7 +347,7 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 * Norman: {{t|nrf|ventre|m}} {{qualifier|Jersey, Guernsey}}, {{t|nrf|vãtr|m}} {{qualifier|Sa;rk}}, {{t|nrf|dare}} {{qualifier|continental Normandy}}
 * Northern Ohlone: {{t|cst|hút̄u}}
 * Norwegian: {{t+|no|mage|m}}, {{t+|no|buk|m}}
-* Old Turkic: {{t|otk|𐰴𐰺𐰣|tr=qarïn}}
+* Old Turkic: {{t|otk|𐰴𐰺𐰣|ts=qarïn}}
 * Pashto: {{t+|ps|خېټه|f|tr=xéṭa}}
 * Persian: {{t+|fa|شکم|tr=šekam|sc=fa-Arab}}
 * Pitjantjatjara: {{t|pjt|tjuni}}
@@ -376,7 +376,7 @@ Displaced native {{m+|enm|mawe}}, {{m|enm|maghe}}, {{m|enm|maȝe|t=stomach, maw}
 * Turkmen: {{t|tk|garyn}}
 * Tuvan: {{t|tyv|хырын}}
 * Ukrainian: {{t|uk|живі́т|m|sc=Cyrl}}, {{t|uk|че́рево|n|sc=Cyrl}}
-* Urdu: {{t|ur|پیٹ|m|tr=pēṭ|sc=ur-Arab}}
+* Urdu: {{t|ur|پیٹ|m|tr=peṭ|sc=ur-Arab}}
 * Uzbek: {{t+|uz|qorin}}
 * Vietnamese: {{t+|vi|bụng}}
 * Volapük: {{t+|vo|bälid}}
