--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -17,8 +17,7 @@ From {{inh|en|enm|finden}}, from {{inh|en|ang|findan}}, from {{inh|en|gem-pro|*f
 {{en-verb|finds|finding|found|past2=fand|past2_qual=dialectal|found|past_ptc2=founden|past_ptc2_qual=archaic}}
 
 # {{lb|en|transitive}} To encounter or discover by accident; to happen upon.
-#* {{rfdatek|en|Shakespeare}}
-#*: Searching the window for a flint, I '''found'''/This paper, thus sealed up.
+#* {{RQ:Shakespeare JC|II|i|passage=Searching the window for a flint, I '''found'''/This paper, thus sealed up.}}
 #* {{rfdatek|en|Cowley}}
 #*: In woods and forests thou art '''found'''.
 # {{lb|en|transitive}} To [[encounter]] or [[discover]] something being [[search]]ed for; to [[locate]].
@@ -40,8 +39,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 #: {{ux|en|He kept '''finding''' faults with my work.}}
 # {{lb|en|ditransitive}} To decide that, to discover that, to form the [[opinion]] that.
 #: {{ux|en|I '''find''' your argument unsatisfactory.}}
-#* {{rfdatek|en|Shakespeare}}
-#*: I '''find''' you passing gentle.
+#* {{RQ:Shakespeare Shrew|II|i|passage=I '''find''' you passing gentle.}}
 #* {{rfdatek|en|Cowley}}
 #*: The torrid zone is now '''found''' habitable.
 #* {{quote-book|en|year=1922|author={{w|Ben Travers}}|title={{w|A Cuckoo in the Nest}}
@@ -49,8 +47,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 |passage=“ the awfully hearty sort of Christmas cards that people do send to other people that they don't know at all well. You know. The kind that have mottoes And then, when you see [the senders], you probably '''find''' that they are the most melancholy old folk with malignant diseases. }}
 # {{lb|en|transitive}} To arrive at, as a conclusion; to determine as true; to establish.
 #: ''to '''find''' a verdict; to '''find''' a true bill (of indictment) against an accused person''
-#* {{rfdatek|en|Shakespeare}}
-#*: to '''find''' his title with some shows of truth
+#* {{RQ:Shakespeare Henry 5|I|ii|passage=to '''find''' his title with some shows of truth}}
 # {{lb|en|transitive|archaic}} To supply; to furnish.
 #: ''to '''find''' food for workmen''
 # {{lb|en|transitive|archaic}} To provide for
