/* Translations */ <United Kingdom#58741410>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -125,7 +125,7 @@
 *: Upper Sorbian: {{t|hsb|Zjednoćene kralestwo}}
 * Spanish: {{t+|es|Reino Unido|m}}, {{t|es|Reino Unido de Gran Bretaña e Irlanda del Norte|m}}
 * Swahili: {{t|sw|Ufalme wa Muungano}}
-* Swedish: {{t+|sv|Förenade kungariket}}, {{t+|sv|Storbritannien}} {{q|colloquially}}, {{t+|sv|England}} {{q|colloquially}}
+* Swedish: {{t+|sv|Förenade kungariket}}, {{t+|sv|Storbritannien}} {{q|colloquially}}
 * Tagalog: {{t|tl|Reyno Unido}}
 * Tajik: {{t+|tg|Подшоҳии Муттаҳида}}
 * Tamil: {{t+|ta|ஐக்கிய இராச்சியம்}}
