# {{lb|en|transitive|colloquial}} To [[discipline]] (a [[union]] member) at a branch meeting. #* '''2003''', Paul Routledge, ''The Bumper Book of British Lefties'' (page 199) #*: His staff were 'not journalists, but Communists', he maintained. Nonetheless, in 1948 his vigorous editorship took the paper's circulation to 120,000 a day. The following year, he was ''''branched'''' by the National Union of Journalists for an intemperate attack on Fleet Street. <branch#58743830>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -365,6 +365,9 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, borrowed fro
 #*: The tree throve and '''branched''' so heavily that the windows of Lower West and the Doll's Flat were darkened.
 # {{lb|en|ambitransitive}} To (cause to) divide into separate parts or subdivisions.
 # {{lb|en|intransitive|computing}} To [[jump]] to a [[different]] [[location]] in a [[program]], especially as the result of a [[conditional]] [[statement]].
+# {{lb|en|transitive|colloquial}} To [[discipline]] (a [[union]] member) at a branch meeting.
+#* '''2003''', Paul Routledge, ''The Bumper Book of British Lefties'' (page 199)
+#*: His staff were 'not journalists, but Communists', he maintained. Nonetheless, in 1948 his vigorous editorship took the paper's circulation to 120,000 a day. The following year, he was ''''branched'''' by the National Union of Journalists for an intemperate attack on Fleet Street.
 
 ====Related terms====
 * {{l|en|branch off}}
