--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -154,7 +154,7 @@ From {{inh|en|enm|brik}}, {{m|enm|bryke}}, {{m|enm|bricke}}, from {{der|en|dum|b
 * Koyraboro Senni: {{t|ses|feraw}}
 * Kurdish:
 *: Kurmanji: {{t+|ku|xişt|f}}, {{t+|ku|kerpîç|f}}
-*: Sorani: {{t+|ku|خشت|tr=xisht|sc=ku-Arab}}
+*: Sorani: {{t+|ku|خشت}}
 * Kyrgyz: {{t+|ky|кыш|sc=Cyrl}}, {{t|ky|кирпич|sc=Cyrl}}
 * Ladin: {{t|lld|ziedl|m}} {{qualifier|Gardenese}}
 * Lao: {{t+|lo|ດິນຈີ່}}, {{t|lo|ອິດຖະ}}
