--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -176,6 +176,7 @@ From {{etyl|ML.|en}} {{m|la|secrētārius||one entrusted with secrets}}, from {{
 {{trans-mid}}
 * Malay: {{t|ms|setiausaha}}, {{t|ms|sekretaris}}
 * Manx: {{t|gv|screeudeyr|m}}
+* Russian: {{t+|ru|генсек}}
 * Scottish Gaelic: {{t|gd|rùnaire|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|та̑јнӣк|m}}, {{t|sh|та̑јница|f}}
