Added derived characters <坪#58755164>

--- a/en/坪/坪.13037.wikitext
+++ b/en/坪/坪.13037.wikitext
@@ -4,6 +4,9 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=41149|canj=GMFJ|ids=⿰土平}}
 
+====Derived characters====
+* [[𦱾]]
+
 ====References====
 * {{Han ref|kx=0226.220|dkj=04976|dj=0461.340|hdz=10430.090|uh=576A|ud=22378|bh=A957|bd=43351}}
 
