t+dz:[[འབྲུག་སྐད]] ([[WT:EDIT|Assisted]]) <thunder#58777337>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -107,6 +107,7 @@ From {{inh|en|enm|thunder}}, {{m|enm|thonder}}, {{m|enm|thundre}}, {{m|enm|thonr
 * Dalmatian: {{t|dlm|tun|m}}
 * Danish: {{t+|da|torden|c}}
 * Dutch: {{t+|nl|donder|m}}
+* Dzongkha: {{t|dz|འབྲུག་སྐད}}
 * Erzya: {{t|myv|пургине}}
 * Esperanto: {{t+|eo|tondro}}
 * Estonian: {{t|et|kõu}}
