/* Translations */ <United Kingdom#58780277>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -139,7 +139,7 @@
 * Urdu: {{t|ur|مملکت متحدہ|tr=mamlakat muttahidā|sc=ur-Arab}}, {{t|ur|یونائٹڈ کنگڈم|tr=yūnāiṭeḍ kiṅgḍam|sc=ur-Arab}}
 * Uyghur: {{t|ug|بۈيۈك برىتانىيە ۋە شىمالىي ئىرلاندىيە بىرلەشمە پادىشاھلىقى}}
 * Uzbek: {{t+|uz|Birlashgan Qirollik}}
-* Vietnamese: {{t+|vi|Vương quốc Anh}}, {{t+|vi|Anh Quốc}}
+* Vietnamese: {{t+|vi|Vương quốc Anh}}, {{t+|vi|Anh Quốc}} ({{t|vi|英國|sc=Hani}})
 * Võro: {{t|vro|Ühendkuningriik}}
 * Welsh: {{t|cy|Teyrnas Unigol|f|alt=Y Deyrnas Unigol}}
 * West Frisian: {{t|fy|Feriene Keninkryk}}
