--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -80,7 +80,7 @@
 * Kurdish: {{t+|ku|Keyaniya Yekbûyî}}
 * Kyrgyz: {{t|ky|Бириккен Падышалык}}
 * Lao: {{t+|lo|ສະຫະລາຊະອານາຈັກ}}
-* Latin: {{t|la|Rēgnum Ūnītum|n}}
+* Latin: {{t|la|Rēgnum Ūnītum|n}}, {{t|la|Britanniarum regnum|m}}
 * Latvian: {{t|lv|Apvienotā Karaliste|f}}, {{t|lv|Lielbritānijas un Ziemeļīrijas Apvienotā Karaliste|f}}
 * Lithuanian: {{t+|lt|Jungtinė Karalystė}}
 * Macedonian: {{t+|mk|Обединето Кралство|n}}
