/* Translations */ Added Sanskrit translation of this word. <fight#58781499>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -466,6 +466,7 @@ From {{inh|en|enm|fight}}, {{m|enm|feyght}}, {{m|enm|fiȝt}}, {{m|enm|fecht}}, f
 * Portuguese: {{t+|pt|batalha|f}}, {{t+|pt|luta|f}}
 * Romansch: {{t|rm|cumbat|m}}, {{t|rm|cumbata|f}}
 * Russian: {{t+|ru|би́тва|f}}, {{t+|ru|сраже́ние|n}}, {{t+|ru|бата́лия|f}}
+* Sanskrit: {{t+|sa|युद्ध|n}}
 * Scottish Gaelic: {{t|gd|cogadh|m}}, {{t|gd|sabaid|f}}, {{t|gd|blàr|m}}
 * Slovak: {{t+|sk|bitva|f}}, {{t|sk|boj|m}}
 * Swahili: {{t+|sw|vita}}
