--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -38,6 +38,10 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 # {{lb|en|obsolete}} [[stretched|Stretched]] out; fully [[extended]]. {{defdate|15<sup>th</sup>-16<sup>th</sup>c.}}
 # {{rfv-sense|en}} {{lb|en|obsolete|rare}} [[strait|Strait]]; [[narrow]].
 #* {{quote-book|en|year=c. 1360 |title=The Travels of Sir John Mandeville|author=Sir John Mandeville|page= |ISBN=|passage=Egypt is a long country, but it is '''straight''', that is to say, narrow.}}
+#* {{quote-book|en|year=1814 |title=The Beauties of England and Wales|author=John Britton, ‎Edward Wedlake Brayley, ‎Thomas Hood |page= |ISBN=|passage=that the old streets are unfit for the present frequency of Coaches; and that the passage of Ludgate is a throat too '''straight''' for the body.}}
+#* {{quote-book|en|year=1893  |title=The Pulpit: A Magazine of Sermons - Volume 8 |author=|page=322 |ISBN=|passage="Enter ye into the '''straight''' gate; for wide is the gate and broad is the way that leadeth unto destruction, and many go in thereat ; because '''straight''' is the gate and narrow is the way that leadeth unto life, and few there be that find it."}}
+#* {{quote-book|en|year=1894 |title=American Anthropologist |author=|page=153 |ISBN=|passage=Family or Gentile expansion: “Behold now the place where we dwell with thee is too '''straight''' for us.” }}
+#* {{quote-book|en|year=2013 |title=Purposes of the Cross|author=Dr. Apostle Emmanuel Adebiyi |page= |ISBN=|passage=One is a wide gate and broad way seeker, while the other is the '''straight''' gate and narrow way seeker.}}
 # Free from [[dishonesty]]; [[honest]], law-abiding. {{defdate|from 16th c.}}
 #* '''1879''', {{w|Anthony Trollope}}, ''John Caldigate'':
 #*: ‘It wasn't the proper thing, squoire. It wasn't '''straight'''.’
